=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 3.04 - IN DEVELOPMENT

=over

=item *

Upgraded: Apache from 1.3.37 to 1.3.41, mm from 1.4.2 to 1.4.2, and mod_ssl 
from 2.8.28 to 2.8.31 to incorporate latest upstream security bug fixes; 
Disabled use of HTTP TRACE method in krang httpd and siteserver conf templates 
to address a security vulnerability in the apache default configurarion

=item * 

Added linked_stories() to L<Krang::ElementClass> to make this interface
available to all elementclasses, especially WYSIWYG editors and the
like. [Bodo Schulze]

=item *

Fixed bug in FTP code where timezone used by FTP server (for file creation
dates, logging, etc.) was always UTC regardless of the local machine's
timezone (causing inconsistency in Krang dates and log entries). [Noam Weinstein]

=item *

Made sure a media is reported as unpublished after changing its
category. [Bodo Schulze]

=item *

Added convenience method C<root_category()> to
L<Krang::Category>. [Bodo Schulze]

=item *

Integrated PoorText with StoryLink interface. [Bodo Schulze]

=item *

Added the C<ErrorNotificationEmail> configuration directive that can contain an optional
comma-separated list of email address that will be sent an email with details about
any Internal Server Errors that occur. [Michael Peters]

=item *

Added C<retire_hook> and C<unretire_hook> hooks for element classes when things are moved
in and out of the retired objects section. [Michael Peters]

=item *

Added C<untrash_hook> hook for element classes when things are taken
out of the trash. [Michael Peters]

=item *

Added the ability to change an element's class in the Element Editor
UI if the element library is configured to allow it (using the
C<ChangeableElementClasses> directive in F<set.conf>). [Michael Peters]

=item *

Added a new WYSIWYG elementclass L<Krang::ElementClass::PoorText> and all
it takes. [Bodo Schulze]

=item *
